Adjust dimension of image frame to prevent layout distortion

--- a/src/styles/Result.css
+++ b/src/styles/Result.css
@@ -25,7 +25,7 @@
 .result-results {
   margin-top: 20px;
   margin-left: 20px;
-  margin-bottom: 4px;
+  margin-bottom: 24px;
   width: 80px;
   height: 36px;
   font-family: Ubuntu;
